syntax = "proto3";
import "CipherPayload.proto";

package ecliptix.proto.verification;
option csharp_namespace = "Ecliptix.Core.Protobuf.VerificationServices";

service VerificationServiceActions {
  rpc SendVerificationCode(CipherPayload) returns (stream CipherPayload);
  rpc VerifyWithCode(CipherPayload) returns (CipherPayload);
  rpc GetVerificationSessionIfExist(CipherPayload) returns (stream CipherPayload);
}
